# lakehouse-contract-lab

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
app/: __init__.py  databricks_adapter.py  main.py  resource_pack.py  snowflake_adapter.py
architecture/: blueprint.json
artifacts/: architecture-summary.json  bronze-preview.json  gold-preview.json  lakehouse-proof-pack.json  quality-report.json  review-summary.json  silver-preview.json  source-pack.json
data/: export_targets.json  quality_rules.json  source_orders.csv  validation_cases.json
docs/: BUSINESS_OPERATIONS.md  COMMERCIALIZATION_INDEX.md  DEPLOYMENT_ACTIVATION.md  PAYMENTS_AND_REFUNDS_DRAFT.md  PRIVACY_POLICY_DRAFT.md  REVENUE_READINESS.md  architecture-evidence-map.md  cloud-ai-architecture.md  commercial-offer.md  conversion-ux-model.md  data-contracts.md  data-platform-operating-patterns.md  enterprise-readiness.md  medallion-architecture.md  monetization-playbook.md  openrouter-routing.md  product-operating-model.md  quality-gate.md  revenue-architecture.md  revenue-growth-model.md  reviewer-evidence-map.md  search-growth-implementation.md  service-architecture.md  service-growth-model.md  service-launch-playbook.md  service-package.md  system-architecture.md
scripts/: build_lakehouse_artifacts.py
site/: index.html  llms.txt  robots.txt  service-offer.json  sitemap.xml
tests/: __init__.py  test_api.py  test_build_lakehouse.py  (+5 more)
(+9 files in other folders)
