[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[project]
name = "lakehouse-contract-lab"
version = "1.0.0"
description = "Spark + Delta medallion proof with quality gates and contract surfaces"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Doeon Kim", email = "ehdjs1351@gmail.com"}]
keywords = ["spark", "delta-lake", "medallion", "data-contracts", "snowflake"]
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.30.6",
    "pyspark==3.5.6",
    "delta-spark==3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov>=5.0.0",
    "ruff==0.9.10",
    "httpx>=0.27.0",
]
snowflake = [
    "snowflake-connector-python>=3.6.0",
]
databricks = [
    "databricks-sdk>=0.20.0",
]
cloud = [
    "lakehouse-contract-lab[snowflake,databricks]",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[project.urls]
Repository = "https://github.com/KIM3310/lakehouse-contract-lab"
